# ChangeLog for dev-perl/Net-SSLeay
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/ChangeLog,v 1.74 2011/09/25 11:31:42 tove Exp $

*Net-SSLeay-1.410.0 (25 Sep 2011)

  25 Sep 2011; Torsten Veller <tove@gentoo.org> +Net-SSLeay-1.410.0.ebuild:
  Version bump

*Net-SSLeay-1.400.0 (24 Sep 2011)

  24 Sep 2011; Torsten Veller <tove@gentoo.org> +Net-SSLeay-1.400.0.ebuild:
  Version bump

*Net-SSLeay-1.380.0 (21 Sep 2011)

  21 Sep 2011; Robin H. Johnson <robbat2@gentoo.org>
  +Net-SSLeay-1.380.0.ebuild:
  Version bump via perl-bump experimental tool.

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Net-SSLeay-1.36.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Net-SSLeay-1.360.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Net-SSLeay-1.360.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +Net-SSLeay-1.360.0.ebuild:
  Change version scheme

  30 Jul 2011; Torsten Veller <tove@gentoo.org> Net-SSLeay-1.36.ebuild:
  Drop ~sparc-fbsd KEYWORD

  03 May 2011; Fabian Groffen <grobian@gentoo.org> Net-SSLeay-1.36.ebuild:
  Marked ~x64-freebsd

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -Net-SSLeay-1.35.ebuild,
  -Net-SSLeay-1.35-r1.ebuild:
  Cleanup

  16 Apr 2010; Raúl Porcel <armin76@gentoo.org> Net-SSLeay-1.36.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #310453

  11 Apr 2010; <nixnut@gentoo.org> Net-SSLeay-1.36.ebuild:
  ppc stable #310453

  05 Apr 2010; Markus Meier <maekke@gentoo.org> Net-SSLeay-1.36.ebuild:
  amd64/arm/x86 stable, bug #310453

  02 Apr 2010; Jeroen Roovers <jer@gentoo.org> Net-SSLeay-1.36.ebuild:
  Stable for HPPA (bug #310453).

  21 Mar 2010; Brent Baude <ranger@gentoo.org> Net-SSLeay-1.36.ebuild:
  stable ppc64, bug 310453

*Net-SSLeay-1.36 (02 Feb 2010)

  02 Feb 2010; Torsten Veller <tove@gentoo.org> +Net-SSLeay-1.36.ebuild:
  Version bump

*Net-SSLeay-1.35-r1 (10 Jan 2010)
