@@ -5,16 +5,18 @@ DIST Net-SSLeay-1.36.tar.gz 145651 RMD160 f9bab073ea25b7574d49b411324024ecd37503
 DIST Net-SSLeay-1.38.tar.gz 151687 RMD160 18202d2c0c6f5db4d9318fc8a3f8a211515c4b32 SHA1 8dcd7fb642faa2e2c7b208c9059e4bf0252bcb5a SHA256 3f0a05aab0ba9cf8aa1abd45a0fa4c7b389ebd78dd9082a2c5c7456ba4f311a4
 DIST Net-SSLeay-1.40.tar.gz 145683 RMD160 dec073b0886eb61d674b6fcbe4988280b61e2d79 SHA1 762603b729d0c7bc88de7455cb37208db59ef531 SHA256 8128a04f091e832a41b90c179cd2dd76ea5cd613a796a5dc1a0c478c909ae451
 DIST Net-SSLeay-1.41.tar.gz 145842 RMD160 7a98be0da26c14824d3e3c33df4f0e216350a318 SHA1 bad48573634cb2c19622e14eaf16cdb88102baa1 SHA256 7ffe8fed81afd6f00c5e4b397701d26ab44b29e9afafca7feb1d39d9e2763bbe
+DIST Net-SSLeay-1.42.tar.gz 146035 RMD160 c2f2f66b7f9e65daa474fae688e12e44a0591e70 SHA1 4bb2ac0b99a700155e4731fe335641590c4129fc SHA256 b6ca7719cd8568e60204f39027c1c68d19fa690b1f3fd380ed14031a1a70fd9d
 EBUILD Net-SSLeay-1.360.0.ebuild 858 RMD160 4b88f500f195857055f0f009b96cf2a0ab2d8533 SHA1 27abb52e5377cd7947816806346790c78efcd1f5 SHA256 1c9dcdd94d3bc5c00b154f05039ba5bc5bf9953a5fcdb1370c92d8455a0b585d
 EBUILD Net-SSLeay-1.380.0.ebuild 873 RMD160 2addf4ed3eb8dff5055dd3c2c11f4b27013a685e SHA1 7e6310b44502032593ecbca685b7709eb7ada5ea SHA256 ab7917a65e892a774277b89e651004ac8ab59669bd3721f2343f0ec7a6303be3
 EBUILD Net-SSLeay-1.400.0.ebuild 870 RMD160 df91eecbc704004f2b392b650c0824cf80e62561 SHA1 71e17f8ca918aca6894d983bf99fdb7d45f6ceeb SHA256 41ac19b874aa579d8076fa39dae3b39c54848a325732ac48404853938926f27c
 EBUILD Net-SSLeay-1.410.0.ebuild 870 RMD160 739c1e79c5b1b49261eb5b9744f63edc2f9ca55c SHA1 f62ddeae7fe0649961999ac3072dd5aa5f225a15 SHA256 48096acdbbab0273f183b59b96816ee305c4049ea196f00c08af565effc5145b
-MISC ChangeLog 8387 RMD160 e808a0397a27dfad8ec49d86dcfb2a57355edb3e SHA1 5a02a8840fce94be96cde190417a4135ef6d867b SHA256 3196f30f09dad021b708ddf2d0b4a6ca473523eb3595c7e41abd7e3c4d6002aa
+EBUILD Net-SSLeay-1.420.0.ebuild 870 RMD160 04b087e9e2fe5ade2efa05757bc4f3789a37fbe1 SHA1 8bcefaee01a25490afb36b49b71fc8a7abd03378 SHA256 8f327046eb7a84f94dd73828c5a44e54d3fcea806ac0c1e86a08e50b7833587f
+MISC ChangeLog 8514 RMD160 cb8bf55789401667ed05a63485598064f994ae12 SHA1 45b4fed474922631dab12c70411b97c266fadade SHA256 25fa7a262d7b077fd2eda7d842c3e519e34869e8f447f078872720f9c08158e8
 MISC metadata.xml 236 RMD160 d8798287431e0a4cb65682c25899c06322f5a44f SHA1 237129d5c39e7fc38452f95535d4e0883c1d3ab4 SHA256 5838629331fbbe8505809e501aca686cc13ac87dce59edc95052fb71bdbcbd5e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk5/ESMACgkQV3J2n04EauwD4gCffzhG5nkv62d5g/pOn9+HZXvb
-DeQAn0yscENoc5a+CVflnnFlwlKACCR0
-=vKcf
+iEYEAREIAAYFAk6fJccACgkQV3J2n04EauzDbwCfSg5UXb0Hm2piC8fwdrTZZpuP
+Ew4AnRyWIVk3bv+gTzQzNzce3OptxwMN
+=SLKT
 -----END PGP SIGNATURE-----
