@@ -1,0 +1,27 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SSLeay/Net-SSLeay-1.420.0.ebuild,v 1.1 2011/10/19 19:32:18 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=MIKEM
+MODULE_VERSION=1.42
+inherit perl-module
+
+DESCRIPTION="Net::SSLeay module for perl"
+
+LICENSE="openssl"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="dev-libs/openssl"
+DEPEND="${RDEPEND}"
+#	test? ( dev-perl/Test-Exception
+#		dev-perl/Test-Warn
+#		dev-perl/Test-NoWarnings )"
+
+#SRC_TEST=do
+
+export OPTIMIZE="$CFLAGS"
+export OPENSSL_PREFIX=${EPREFIX}/usr
