@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST NetAddr-IP-4.028.tar.gz 140563 RMD160 ee7dd405bc34833e3a9329e219bd137c2d7df3dd SHA1 103204d9df5abfc70ce79d2306c00fb86712809b SHA256 00430789704a8264a736a18cfe0fcb77701c17029f7d0426adf60254db407e1a
 DIST NetAddr-IP-4.044.tar.gz 149541 RMD160 4a67e0a29e3989cbaf9d7a47b79e4a0973be4e31 SHA1 b8f51fe2ea8363f1581802c90ab096e67ea23835 SHA256 aef798b33f7548b3d1fe44eec71da0e72879bd75d5f495c3a872a7d0b72c4177
+DIST NetAddr-IP-4.048.tar.gz 153604 RMD160 a9b75ec233ba6a6588474eb0c23b347713bec511 SHA1 fb2b3d1504465522972f4ac0799c3a2694e82c08 SHA256 965b26917f03141e6400ebd099b6f0957f94017f950ab59d46cbc279e3ca4eeb
 EBUILD NetAddr-IP-4.028.ebuild 450 RMD160 1d248053dc6ab3a18c02b4b8e46ba1a633172ac7 SHA1 0f07d38cc8d46d2b986d747c905624b87dcad985 SHA256 1b40e8fc0b009984c306ea9b7e1483197cd811ad90c8a3d88b6981855d23454f
 EBUILD NetAddr-IP-4.44.0.ebuild 604 RMD160 5851a8aa1914b7e2fc5feaee2708af405140666a SHA1 844992292e6e709fca0fe263cdc7e15338c44520 SHA256 debad03a51b7c6720cd4213b83292102d798156b3ae7d8bbb1393c36c4769b9f
-MISC ChangeLog 4359 RMD160 a01f2882ef6706ac18f22601298cce31b8403e79 SHA1 36ec4b8ad8b209ceb32deffeb1e1f146362e5950 SHA256 dc926cd1a8397d2057a7066cd8bff303d67f0ec65c04c63ba6f39046997ab400
+EBUILD NetAddr-IP-4.48.0.ebuild 604 RMD160 720c2da1ac61f7d6ba6e6045e0ba2abb61b537a5 SHA1 97db533e38374968961f4af62ee537d91e1b1c7b SHA256 115c53a9c65ccf1f919afdc65d45a431c81bbb3484d2cbac0113e14057ce7528
+MISC ChangeLog 4484 RMD160 549ec2e526cbc4f77d045b8c17d8caeea8f882f2 SHA1 4c56575ea420476554c3949b6c3aafc860eb4716 SHA256 680309dac7dcb1734cf7cf41be593c71812b0ed7c0bee927692bdf6c54597f6f
 MISC metadata.xml 355 RMD160 55932046a53859667cf729ac6e8f430e3737359f SHA1 48d7b1e2b93abad2bf4396a4c6200375bf87e32a SHA256 38163ef31f2841cb0a190b229e771e0cd7d382ca06ce3da16bf027784427b99e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk4y7xoACgkQV3J2n04EauyNzwCgyy7k2Eroqh2HQ1U4axMKCbhy
-zkYAn0Wuih3lXQugSzj5RFfrdOACe7mH
-=CFEd
+iEYEAREIAAYFAk6fJSkACgkQV3J2n04EauzzcACfY8nNKjyCbGKNVt3k/UVgQUqC
+FYwAoLgZ1cYO2Q6mSBEVZe7/5QtScaoc
+=V/qc
 -----END PGP SIGNATURE-----
