@@ -1,0 +1,26 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/NetAddr-IP-4.48.0.ebuild,v 1.1 2011/10/19 19:29:39 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=MIKER
+MODULE_VERSION=4.048
+inherit perl-module
+
+DESCRIPTION="Manipulation and operations on IP addresses"
+
+SLOT="0"
+LICENSE="Artistic"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE="ipv6"
+
+RDEPEND="ipv6? ( dev-perl/Socket6 )"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
+
+src_prepare() {
+	perl-module_src_prepare
+	touch "${S}"/Makefile.old
+}
