@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST SQL-Translator-0.11008.tar.gz 413614 RMD160 43f1f31f4691971c8ef5555b34e937fef24d3eeb SHA1 d0c338fe002042215071b78e8433a5a28047cd11 SHA256 084440b3ad5156c95040cce3725e5d39461eb0b4d851ddeaa98860fefe0b6ec0
 DIST SQL-Translator-0.11009.tar.gz 413910 RMD160 df93ea4289e728f1005b8f2240bf37b2edcb96e0 SHA1 66a9d97b7af9e87647eebeaca8456d22107f42ce SHA256 b8110c9b25ddf339311709372e3146f75263fa805fcb5f62f5b1d4c35bd1ccb2
+DIST SQL-Translator-0.11010.tar.gz 415743 RMD160 89a3aad2729c0f77351566ad408b232f92fa2506 SHA1 bc2a32bf8d57363c0937b0d465f0b6991e4cefc7 SHA256 e5b39a88ef2c5e3bb0669d6e581247f0784a6a6e5db326163daf687e5ae5f109
+EBUILD SQL-Translator-0.110.100.ebuild 1017 RMD160 d8487fbfc969604e4c8a4846d13636e86c8948a0 SHA1 4043893682980fc2cd22d35bf3630ab8ff0e8bbc SHA256 7cfc871745975e73c26fe13d7e14cb364ce78b5a989029d21ce8de2becf5b224
 EBUILD SQL-Translator-0.110.80.ebuild 1016 RMD160 143caac52be3d5d853144cb7746d3ad5cf0b859f SHA1 fab13ec4657dc5218eb7fa019d1aebfcac3b77b4 SHA256 32e5d61270ad452170d2a03373930a73cc2c037165c1687b0c081399f9e78a87
 EBUILD SQL-Translator-0.110.90.ebuild 1016 RMD160 0341d2bff1f85d082b83cb5bce30a4eb0440f819 SHA1 6dc8bdc9730b597f37b5ae82117a6dab07a96085 SHA256 b6a0edf0f3ff0225b8e69d4f4629a3d0870d4209a0b06634dfb01da2eed8ba1a
-MISC ChangeLog 2965 RMD160 f2e05ecabaf30eb8ac8755d51b6bb64f85bef90a SHA1 f519136082a6784abbd3780403e672fed819e0ce SHA256 d4bd552ed68c1a126411fde4bac19cafd71d963b7fa24e087f3bcb89bc8c31b0
+MISC ChangeLog 3106 RMD160 9567fb3223f5c28fdd5834081d3e1b3777d4b731 SHA1 71da27c50c49193c6e158ff7419b9364f647d9de SHA256 a62eca9321a00e01a325deb7ffc9acd8c7f6b7642fbe10770baf5853cd916cbd
 MISC metadata.xml 309 RMD160 ba70879e9a15e632f75354d4bdbe52c2a80ded21 SHA1 413130f371329af1a04a95c0dc7a7b0d3a155858 SHA256 a11cc735dcac77244083103619d654689dfa58d0d7c8575444244e3304012e55
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk5k+5wACgkQV3J2n04EauytcACgz+ELgmPihPa3I6BE/O9txcrJ
-xuwAniok6f22OG6qd9uazdxuwWlq8xkU
-=97rq
+iEYEAREIAAYFAk6fJGQACgkQV3J2n04EauxrzwCg3me2xgI2jyE/Efzl9wpI9bXq
+lvoAnAnih6ylPXCW6Z2PBPM9AVXTIX6k
+=gXBi
 -----END PGP SIGNATURE-----
