@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/NetAddr-IP
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.34 2011/07/29 17:34:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.35 2011/10/19 19:29:39 tove Exp $
+
+*NetAddr-IP-4.48.0 (19 Oct 2011)
+
+  19 Oct 2011; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.48.0.ebuild:
+  Version bump
 
   29 Jul 2011; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.42.0.ebuild,
   -NetAddr-IP-4.43.0.ebuild:
