@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/SQL-Translator
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.20 2011/09/05 16:40:54 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SQL-Translator/ChangeLog,v 1.21 2011/10/19 19:26:22 tove Exp $
+
+*SQL-Translator-0.110.100 (19 Oct 2011)
+
+  19 Oct 2011; Torsten Veller <tove@gentoo.org>
+  +SQL-Translator-0.110.100.ebuild:
+  Version bump
 
 *SQL-Translator-0.110.90 (05 Sep 2011)
 
